''' HAL '''

Implemented new HAL protocol

== 4/Mar/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b45.zip V1.6b45]  ==

''' CBUS '''

Further type cast work for ticket [ticket:617]

== 4/Mar/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b44.zip V1.6b44]  ==

''' Script '''

Ensured groovy_script_status file is written, in a similar way to the jython script_status_file in datafiles.
If a script is hidden it will not be included in lists sent to the client or generate start / stop messages. Resolves ticket [ticket:610]
If groovy scripts contain a hidden=true line they will never be sent to the client, this overrides STATUS string values.

''' CBUS '''

Solve type cast issue when processing Level MMI requests. Resolves ticket [ticket:617]

== 26/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b43.zip V1.6b43]  ==

''' CBUS '''

Dynamically generates messages when ramping buttons are being pressed. Resolves ticket [ticket:605]

See [ServerDocs/CBUSModel] for details.



== 20/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b42.zip V1.6b42]  ==

''' Script '''

Added  isRunning(scriptName) and isRunning(macroName) to the scriptHandler and macroHandler respectively. 

Both handles are now present in the script binding bock and can be called using    macroHandler.isRunning (macroName)  or scriptHandler.isRunning(scriptName). Resolves ticket [ticket:607]

''' M1 '''

Merged in changeset 1367

== 14/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b41.zip V1.6b41]  ==

''' Tutundo '''

Fixed tutondo volume command code. Resolves ticket [ticket:606]

== 13/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b40.zip V1.6b40]  ==

''' Tutundo '''

Fixed tutondo volume scaling

== 12/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b39.zip V1.6b39]  ==

''' Scripting '''

Make messages from flash handled properly

''' M1 '''

Roll in updates
