@@ -4,8 +4,8 @@
 	            classname="com.oopsconsultancy.xmltask.ant.XmlTask"/>
 	
 	<target name="update_xml" depends="" description="updates the xml layout file">
-		<xmltask source="layout.xml" dest="layout.xml"> 
-		   <replace path='version="@id"' 
+		<xmltask source="layout.xml" dest="layout.xml"  > 
+		   <replace path="/layout/elife/@version" 
 		         withText="${app_name}-${major_version}${minor_version}" /> 
 		</xmltask> 
 	</target>
@@ -53,8 +53,12 @@
 		<zip destfile="dist/${app_name}-${major_version}${minor_version}.zip" 
 			update="true"
 			basedir="."
-			includes = "config/config_*.xml" />	
-    </target>
+			includes = "config/config*.xml" />	
+    	<zip destfile="dist/${app_name}-${major_version}${minor_version}.zip" 
+			update="true"
+			basedir="."
+			includes = "layout.xml" />	
+</target>
     
     <target name="build-ext-dir" unless="ext_dir.present" >    	
 	   	<mkdir dir="ext"  />
