@@ -4,9 +4,10 @@
         <!-- ______________________________________  HAL DEFS  ____________________  -->
         <DEVICE ACTIVE="Y" DEVICE_TYPE="HAL" DESCRIPTION="HAL Audio">
                 <CONNECTION>
-                        <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" BAUD="4800" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="RTSCTS"/>
+                        <SERIAL ACTIVE="Y" PORT="/dev/tty" BAUD="19200" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="NONE" />
+                        <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" BAUD="4800" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="NONE" />
                         <IP ACTIVE="N" IP_ADDRESS="127.0.0.1" PORT="5003"/>
-                        <IP ACTIVE="Y" IP_ADDRESS="192.168.1.70" PORT="5000"/>
+                        <IP ACTIVE="N" IP_ADDRESS="192.168.1.70" PORT="5000"/>
                 </CONNECTION>
                 <CATALOGUE NAME="HAL Inputs">
                         <ITEM CODE="cd1" VALUE="09"/>
