@@ -1,4 +1,4 @@
-#Sun Mar 04 15:15:17 EST 2007
+#Wed Mar 28 23:46:43 EST 2007
 major_version=1.6b
-minor_version=46
+minor_version=47
 app_name=eLife
